Refactorisation : Made a driver for OLED display, Added exception handling, changed platformio config for it to find header files at compilation time.

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -16,3 +16,7 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit SSD1306@^2.5.9
+
+build_flags = 
+	-I include/common
+	-I include/drivers
