better build flags, can't press button if host not found, core panic was because of some char pointers not being const char pointers

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -21,3 +21,9 @@ build_flags =
 	-I include/common
 	-I include/drivers
 	-I include/core
+	-Wall
+    -Werror
+    -Wextra
+    -Wuninitialized
+    -Wunused-parameter
+    -Winit-self
